--- a/codebydhruv/public/index.html
+++ b/codebydhruv/public/index.html
@@ -2,46 +2,143 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Favicon & Theme -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Primary Meta Tags -->
+    <title>Dhruv Shah | Full Stack Developer & IS Student</title>
+    <meta
+      name="title"
+      content="Dhruv Shah | Full Stack Developer & IS Student"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio of Dhruv Shah — Information Systems student and full-stack web developer. Explore projects in React.js, Node.js, MongoDB, Express.js, and modern web technologies."
     />
+    <meta
+      name="keywords"
+      content="Dhruv Shah, Web Developer, Full Stack Developer, MERN, React.js, Node.js, MongoDB, Express.js, Tailwind CSS, JavaScript, Portfolio, UMBC, Information Systems"
+    />
+    <meta name="author" content="Dhruv Shah" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codebydhruv.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Dhruv Shah | Full Stack Developer & IS Student"
+    />
+    <meta
+      property="og:description"
+      content="Hi, I'm Dhruv Shah 👋 An Information Systems student and full-stack developer building sleek, high-performance websites and apps using modern web technologies."
+    />
+    <meta
+      property="og:image"
+      content="https://codebydhruv.vercel.app/preview.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://codebydhruv.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="Dhruv Shah | Full Stack Developer & IS Student"
+    />
+    <meta
+      property="twitter:description"
+      content="Full-stack developer passionate about building secure and scalable web apps. Check out my projects in React, Node.js, MongoDB, and more."
+    />
+    <meta
+      property="twitter:image"
+      content="https://codebydhruv.vercel.app/preview.png"
+    />
+
+    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <!-- Fonts -->
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-      </style>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+    </style>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Canonical -->
+    <link rel="canonical" href="https://codebydhruv.vercel.app/" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Dhruv Shah",
+        "url": "https://codebydhruv.vercel.app/",
+        "image": "https://codebydhruv.vercel.app/profile.jpg",
+        "sameAs": [
+          "https://github.com/DhruvIOS",
+          "https://www.linkedin.com/in/dhruvshah23/"
+        ],
+        "jobTitle": "Full Stack Developer | IS Student",
+        "alumniOf": {
+          "@type": "University",
+          "name": "University of Maryland, Baltimore County (UMBC)"
+        },
+        "knowsAbout": [
+          "Web Development",
+          "React.js",
+          "Node.js",
+          "MongoDB",
+          "Information Systems",
+          "Software Engineering"
+        ],
+        "description": "Dhruv Shah is an Information Systems student and full-stack developer passionate about building sleek, secure, and high-performance web applications."
+      }
+    </script>
+
+    <!-- Project Schema: CliniScribe -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CreativeWork",
+        "name": "CliniScribe",
+        "author": {
+          "@type": "Person",
+          "name": "Dhruv Shah"
+        },
+        "url": "https://cliniscribe.vercel.app/",
+        "sameAs": [
+          "https://github.com/DhruvIOS/cliniscribe"
+        ],
+        "description": "CliniScribe is a healthcare-focused web application designed to streamline clinical documentation for medical professionals, with secure note-taking and accessibility features.",
+        "thumbnailUrl": "https://codebydhruv.vercel.app/assets/images/cliniscribe.png"
+      }
+    </script>
+
+    <!-- Project Schema: EDU-HUB -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CreativeWork",
+        "name": "EDU-HUB",
+        "author": {
+          "@type": "Person",
+          "name": "Dhruv Shah"
+        },
+        "url": "https://codebydhruv.vercel.app/#projects",
+        "sameAs": [
+          "https://github.com/DhruvIOS/edu-hub"
+        ],
+        "description": "Edu-Hub is an academic platform built to connect students with resources, assignments, and community-driven discussions in a centralized hub for collaboration.",
+        "thumbnailUrl": "https://codebydhruv.vercel.app/assets/images/edu_hub.png"
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
